--- a/resources/assets/sass/modules/bnb.scss
+++ b/resources/assets/sass/modules/bnb.scss
@@ -256,12 +256,12 @@
           margin: 100px 0;
         }
         .objectives {
-          width: 90%;
+          width: 60%;
           height: auto;
-          margin: 20px auto;
-
+          margin: 100px auto;
+          padding-left: 10%;
           .header {
-            text-align: center;
+            text-align: left;
           }
           .goals,
           .tech {
